--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Freelance Professional Photography</h2>
+          <p class="text-white-50">If your business is in need of some really fucking good photos then you've come to the right place</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
